# eftpipe

./: .coveragerc  .git-blame-ignore-revs  .gitattributes  .gitignore  LICENSE  README.md  environment-dev.yml  environment-emu-dev.yml  environment.yml  pyproject.toml  setup.py
analysis/: ELG_Arnaud.ipynb  LRG.ipynb  debug_cross.ipynb  normalization.ipynb  window.ipynb
cobaya/: subjob.py
cobaya/covmat/: mock_ELG_NGC.covmat  mock_LRG_ELG_x_NGC.covmat  mock_LRG_NGC.covmat  mock_x_NGC.covmat
cobaya/data/: Arnaud_ELG.py  README.md  generate_noric.py  plot_Arnaud_data.ipynb  preprocess.py  process_window.py
cobaya/newdata/: README.md
cobaya/yamls/: BOSS_fib_stnowin_neutrino_classynu.yaml  DR16_noric_LEX_NS_LP024_kmax0.20_EQ02_kmax0.20_XP024_kmax0.20.yaml  DR16_noric_LEX_NS_LP024_kmax0.20_EQ02_kmax0.20_XP024_kmax0.20_gauss.yaml  DR16_noric_LEX_NS_LP024_kmax0.20_EQ02_kmax0.20_XP024_kmax0.20_xnost.yaml  DR16_noric_LEX_NS_LP024_kmax0.20_EQ02_kmax0.20_XP024_kmax0.20_xnost_gauss.yaml  (+9 more)
data/: README.md
eftpipe/: EFTLike.yaml  GridLike.yaml  __init__.py  analysis.py  binning.py  boltzmann.py  chained.py  classy.py  covariance.py  eftlike.yaml  eftlike_d.yaml  eftlike_dx.yaml  eftlike_s.yaml  eftlss.bibtex  eftlss.yaml  fftlog2d.py  gridlike.py  icc.py  interface.py  likelihood.py  log.py  lssdata.py  marginal.py  matryoshka.py  matryoshka_theory.py  model.py  parambasis.py  parser.py  reader.py  theory.py  tools.py  transformer.py  typing.py  window.py
example/: default.yaml  v11_noric_LEX_NS_LP024_kmax0.20_EP024_kmax0.20_XP02_kmax0.20_Vx27.yaml
notes/: Notes of EFT LSS Multi-tracer.tm
picture/: test_picture.ipynb
script/: fsigma8.py  generate_table.py  mkbestfit.py  normalization.py  plot_window.py  profile_matryoshka.py  zeff.py
tests/: conftest.py  test_picture.ipynb  test_pybird.py  test_tools.py
(+410 files in other folders)
